<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.david.easycheckmeasureapp.SendCheckMeasureActivity">
    <item android:id="@+id/action_settings" android:title="@string/action_settings"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/create_new_cm" android:title="@string/create_new_cm"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/send_html" android:title="@string/send_html"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/send_pdf" android:title="@string/send_pdf"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/view_pdf" android:title="@string/view_pdf"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/print_pdf" android:title="@string/print_pdf"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/save_to_cloud" android:title="@string/save_to_cloud"
        android:orderInCategory="100" app:showAsAction="never" />

</menu>
