<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/root_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="10dp"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:layout_marginTop="10dp"
    android:orientation="vertical"
    android:weightSum="1">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/checkmeasure_id_text"
        android:shadowColor="@android:color/black"
        android:shadowDx="1"
        android:shadowDy="1"
        android:shadowRadius="3"
        android:textSize="8sp"
        android:text="Check measure #0 - ERROR"/>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="fill_horizontal"
        android:weightSum="4">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/company_text_view"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/company"
            android:singleLine="true"
            android:layout_width="0dp"
            android:layout_height="@dimen/rowHeight"
            android:layout_weight="3" />
    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="fill_horizontal"
        android:weightSum="4">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/customer_text_view"
            android:textSize="14sp" />

        <EditText
            android:singleLine="true"
            android:id="@+id/customer"
            android:layout_width="0dp"
            android:layout_height="@dimen/rowHeight"
            android:layout_weight="3"/>
    </TableRow>

    <TableRow
        android:id="@+id/addr_contr"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="fill_horizontal"
        android:weightSum="4">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/address_text_view"
            android:textSize="14sp" />

        <EditText
            android:singleLine="true"
            android:id="@+id/address"
            android:layout_width="0dp"
            android:layout_height="@dimen/rowHeight"
            android:layout_weight="3"/>
    </TableRow>

    <TextView
        android:id="@+id/measurement_counter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Measurements entered so far:"/>

    <ListView
        android:id="@+id/measurement_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="sendCheckMeasure"
            android:text="Send"
            android:textSize="24sp" />

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="addMeasurement"
            android:text="Add.."
            android:textSize="24sp" />
    </LinearLayout>
</LinearLayout>